fix spacing issue in groups. Fix #147

--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,7 @@ body {
 .footer {
     margin-top: 20px;
 }
+
+.subtitle{
+    height: 75px;
+}
